--- a/Dokumentacija/Implementacija.tex
+++ b/Dokumentacija/Implementacija.tex
@@ -3,12 +3,78 @@
 		
 		\section{Korištene tehnologije i alati}
 		
-			\textbf{\textit{dio 2. revizije}}
 			
-			 \textit{Detaljno navesti sve tehnologije i alate koji su primijenjeni pri izradi dokumentacije i aplikacije. Ukratko ih opisati, te navesti njihovo značenje i mjesto primjene. Za svaki navedeni alat i tehnologiju je potrebno \textbf{navesti internet poveznicu} gdje se mogu preuzeti ili više saznati o njima}.
+			  U izradi projekta većina digitalne komunikacije ostvarena je preko platforme
+			  \textbf{WhatsApp} (\textit{https://web.whatsapp.com/} ).
+
+			  Korištene su sljedeće tehnologije i alati:
+
+			  \begin{packed_item}
+
+				\item \textbf{Springboot}
+					\begin{packed_item}
+						\item open source radni okvir za kreaciju mikro-servisa, idealan za potrebe projekta
+						\item u njemu je izrađen backend dio projekta 
+						\item \textit{https://spring.io/projects/spring-boot}
+					\end{packed_item}
+
+				\item \textbf{React}
+				\begin{packed_item}
+					\item JavaScript biblioteka za izgradnju korisničkih sučelja 
+					\item korišten za izradu čitavog frontenda dijela aplikacije s kojim korisnik dolazi u interakciju 
+					\item provjerava ispravnost podataka unesenih u obrasce 
+					\item \textit{ https://www.reactjs.org/}
+				\end{packed_item}
+
+				\item \textbf{PostgreSQL }
+				\begin{packed_item}
+					\item jezik u kojem je napravljena baza podataka  
+					\item besplatan i open source sustav za upravljanje relacijskim bazama podataka s naglaskom na mogućnosti proširivanja  
+					\item \textit{ https://www.postgresql.org/}
+				\end{packed_item}
+				
+				\item \textbf{pgAdmin}
+				\begin{packed_item}
+					\item za upravljanje bazom podataka neovisno o backendu 
+					\item \textit{ https://www.pgadmin.org/}
+				\end{packed_item}
+
+				\item \textbf{IntelliJ }
+				\begin{packed_item}
+					\item  IDE za javu u kojem je kodiran backend dio projekta 
+					\item \textit{ https://www.jetbrains.com/idea/}
+				\end{packed_item}
+
+				\item \textbf{Visual Studio Code}
+				\begin{packed_item}
+					\item  uređivač izvornog koda za razne programske jezike
+					\item  korišten za kodiranje frontend dijela projekta i projektne dokumentacije
+					\item \textit{ https://code.visualstudio.com/}
+				\end{packed_item}
+
+				\item \textbf{Astah UML }
+				\begin{packed_item}
+					\item program za uređivanje svih vrsta UML dijagrama
+					\item svi dijagrami u ovom dokumentu izrađeni su u Astahu 
+					\item \textit{https://astah.net/products/astah-uml/}
+				\end{packed_item}
+
+				\item \textbf{GitHub }
+				\begin{packed_item}
+					\item  stranica za funkcionalno zajedničko stvaranje i uređivanje grupnog projekta 
+					\item \textit{https://github.com/}
+				\end{packed_item}
+
+				\item \textbf{Latex}
+				\begin{packed_item}
+					\item programski jezik za pisanje strukturiranih tekstova, često korišten za stvaranje profesionalnih dokumenata
+					\item koristi markup jezik koji prevodi u formatirane dokumente
+					\item korišten za dokumentiranje projekta
+					\item \textit{https://www.latex-project.org/}
+				\end{packed_item}
+			\end{packed_item}
 			
-			
-			\eject 
+			 \eject 
 		
 	
 		\section{Ispitivanje programskog rješenja}
