--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -1136,7 +1136,7 @@
 						\includegraphics[scale=0.8]{slike/dijagram ekipa.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
 						\centering
 						\caption{Funkcionalnost tragača i istraživača}
-						\label{fig:Funkcionalnost neregistriranog korisnika, administratora aplikacije i voditelja postaje}
+						\label{fig:Funkcionalnost tragača i istraživača}
 					\end{figure}
 				
 					\eject		
