--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -391,7 +391,7 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 		
 		\section{Dijagram stanja}
 			
-			Dijagram stanja opisuje dinamičko ponašanje sustava uslijed raznih mogućih
+			Dijagram stanja (slika \ref{fig:dijagram stanja - tragač}) opisuje dinamičko ponašanje sustava uslijed raznih mogućih
 		događaja. Uspješnom prijavom prikazana je početna stranica korisnika u ulozi tragača. 
 		Na početnoj stranici tragač bira jednu od tri opcije:
 		\begin{packed_item}
@@ -403,7 +403,7 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 		\begin{figure}[H]
 			\includegraphics[scale=0.5]{slike/dijagram stanja - tragač.png}
 			\centering
-			\caption{dijagram stanja - tragač}
+			\caption{Dijagram stanja - tragač}
 			\label{fig:dijagram stanja - tragač}
 		\end{figure}
 			
@@ -411,7 +411,7 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 		
 		\section{Dijagram aktivnosti}
 
-		Dijagramom aktivnosti modelirano je stvaranje nove akcije korisnika u ulozi istraživača.
+		Dijagramom aktivnosti na slici  \ref{fig:dijagram aktivnosti - stvaranje nove akcije} modelirano je stvaranje nove akcije korisnika u ulozi istraživača.
 		Do postupka stvaranja nove akcije dolazi se sa stranice prikaza popisa akcija klikom na 
 		\textit{Stvori novu akciju}. Na formularu za novu akciju se prilikom klika na \textit{Stvori novu akciju},
 		prije spremanja podataka nove akcije u bazu, provjerava jesu li uneseni svi potrebni podatci i jesu li uneseni podatci ispravni.
@@ -421,7 +421,7 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 		\begin{figure}[H]
 			\includegraphics[scale=0.5]{slike/dijagram aktivnosti - stvaranje nove akcije.png}
 			\centering
-			\caption{dijagram aktivnosti - stvaranje nove akcije}
+			\caption{Dijagram aktivnosti - stvaranje nove akcije}
 			\label{fig:dijagram aktivnosti - stvaranje nove akcije}
 		\end{figure}
 
