--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -426,8 +426,28 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 		\end{figure}
 
 			\eject
+
+
 		\section{Dijagram komponenti}
+
+		UML-dijagram komponenti je vrsta strukturnog UML-dijagrama koji
+		prikazuje organizaciju i odnose komponenti koje čine programsku potporu. Pruža vizualni prikaz
+		arhitekture sustava, naglašavajući modularnu strukturu i interakcije između komponenti, interne strukture i okoline.
+		\newline Sustavu se pristupa preko dva razlicita sučelja. Preko sučelja za dohvat HTML, CSS i JS datoteka poslužuju se
+datoteke koje pripadaju \textit{frontend} dijelu aplikacije. Router je komponenta koja na
+upit s url određuje koja datoteka će se poslužiti na sučelje. Frontend dio se sastoji
+od niza JavaScript datoteka koje su raspoređene u logičke cjeline nazvane po tipovima aktora koji im pristupaju. Sve JavaScript datoteke ovise o React biblioteci iz
+koje dohvaćaju gotove komponente kao što su gumbi, forme i slično. Preko sučelja 
+za dohvat JSON podataka pristupa se REST API komponenti. REST API poslužuje
+podatke koji pripadaju \textit{backend} dijelu aplikacije. EntityFrameworkCore je zadužen
+za dohvaćanje tablica iz baze podataka pomoću SQL upita. Podaci koji su pristigli 
+iz baze se šalju dalje MVC arhitekturi u obliku DTO  (Data transfer object). 
+React-view komponenta preko dostupnih sučelja komunicira sa \textit{WildTrack} aplikacijom
+te ovisno o korisnikovim akcijama osvježava prikaz i dohvaća nove podatke ili datoteke.
 		
-			\textbf{\textit{dio 2. revizije}}\\
-		
-			 \textit{Potrebno je priložiti dijagram komponenti s pripadajućim opisom. Dijagram komponenti treba prikazivati strukturu cijele aplikacije.}
+		\begin{figure}[H]
+			\includegraphics[scale=0.4]{slike/dijagram komponenti.png}
+			\centering
+			\caption{Dijagram komponenti}
+			\label{fig:dijagram komponenti}
+		\end{figure}
