--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -439,8 +439,9 @@ upit s url određuje koja datoteka će se poslužiti na sučelje. Frontend dio s
 od niza JavaScript datoteka koje su raspoređene u logičke cjeline nazvane po tipovima aktora koji im pristupaju. Sve JavaScript datoteke ovise o React biblioteci iz
 koje dohvaćaju gotove komponente kao što su gumbi, forme i slično. Preko sučelja 
 za dohvat JSON podataka pristupa se REST API komponenti. REST API poslužuje
-podatke koji pripadaju \textit{backend} dijelu aplikacije. EntityFrameworkCore je zadužen
-za dohvaćanje tablica iz baze podataka pomoću SQL upita. Podaci koji su pristigli 
+podatke koji pripadaju \textit{backend} dijelu aplikacije. JpaRepository je sučelje Spring Data JPA projekta korišteno
+za jednostavan dohvat i manipulaciju s podacima u bazi podataka, pružajući apstrakciju nad JPA 
+(Java Persistence API) omogućavajući  izvođenje operacija nad entitetima bez potrebe za izravnim pisanjem SQL upita. Podaci koji su pristigli 
 iz baze se šalju dalje MVC arhitekturi u obliku DTO  (Data transfer object). 
 React-view komponenta preko dostupnih sučelja komunicira sa \textit{WildTrack} aplikacijom
 te ovisno o korisnikovim akcijama osvježava prikaz i dohvaća nove podatke ili datoteke.
