--- a/Dokumentacija/Literatura.tex
+++ b/Dokumentacija/Literatura.tex
@@ -6,6 +6,12 @@
 			
 			\item  Programsko inženjerstvo, FER ZEMRIS, \url{http://www.fer.hr/predmet/proinz}
 			
+			\item  W3Schools, \url{https://www.w3schools.com/}
+			
+			\item Latex Forum, \url{https://latex.org/forum/index.php}
+			
+			\item Spring Boot, \url{https://spring.io/projects/spring-boot}
+			
 			\item  I. Sommerville, "Software engineering", 8th ed, Addison Wesley, 2007.
 			
 			\item  T.C.Lethbridge, R.Langaniere, "Object-Oriented Software Engineering", 2nd ed. McGraw-Hill, 2005.
