--- a/Dokumentacija/Zakljucak.tex
+++ b/Dokumentacija/Zakljucak.tex
@@ -1,9 +1,21 @@
 \chapter{Zaključak i budući rad}
 		
-		\textbf{\textit{dio 2. revizije}}\\
-		
-		 \textit{U ovom poglavlju potrebno je napisati osvrt na vrijeme izrade projektnog zadatka, koji su tehnički izazovi prepoznati, jesu li riješeni ili kako bi mogli biti riješeni, koja su znanja stečena pri izradi projekta, koja bi znanja bila posebno potrebna za brže i kvalitetnije ostvarenje projekta i koje bi bile perspektive za nastavak rada u projektnoj grupi.}
-		
-		 \textit{Potrebno je točno popisati funkcionalnosti koje nisu implementirane u ostvarenoj aplikaciji.}
-		
+Zadatak naše grupe Aristos bio je razvoj web aplikacije koja olakšava koordinaciju prilikom 
+praćenja divljih životinja. Rad na projektu sadržavao je mnoge očekivane i neočekivane izazove 
+i zapreke koje smo rješavali kroz marljivu suradnju.
+\newline Nakon dodjele projektnog zadatka, oformili smo podjedinice za razvoj \textit{frontend-a}, razvoj 
+\textit{backend-a} i pisanje dokumentacije te počeli s raspodjelom rada na incijalnim koracima projekta.
+ Organizacija vremena i rada te podjela poslova bili su od ključne važnosti u napretku projekta, 
+ baš kao i međusobna suradnja. 
+ Kao zajednički oslonac koristili smo rukom crtanu skicu koja prikazuje idejni izgled početne stranice 
+ i njezino grananje na razne funkcionalnosti za različite uloge korisnika. Članovi su se, zbog 
+ nedostatka iskustva u razvoju implementacijskih rješenja, morali angažirati u samostalnom učenju 
+ odabranih alata i programskih jezika kako bi postigli postavljene ciljeve i rokove. 
+\newline Naša \textit{WildTrack} web aplikacija ima još prostora za potencijalna buduća unapređenja 
+koja smo mogli ostvariti uz malo više vremena i vještine, poglavito stvaranje mobilne aplikacije 
+da se približi suvremenim korisnicima. 
+\newline Unatoč prostoru za usavršavanje na određenim aspektima aplikacije, 
+koji je posljedica neiskustva, kao tim smo zadovoljni postignutim konačnim rezultatom, 
+vremenom uloženim u projekt te znanjem koje smo stekli radeći ga. 
+Zajedničko stvaranje web-aplikacije koristilo je kao vrijedno novo iskustvo svakom od članova i približilo nas 
 		\eject 
