funkcionalni zahtjevi ispravci

--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -9,6 +9,7 @@
 				\item Istraživač				
 				\item Voditelj postaje
 				\item Administrator
+				\item Razvojni tim
 				
 			\end{packed_enum}
 			
@@ -39,7 +40,7 @@
 					\end{packed_enum}
 				\end{packed_enum}
 
-				\item  \underbar{Tragač na terenu (inicijator) može:}
+				\item  \underbar{Tragač (inicijator) na terenu  može:}
 				
 				\begin{packed_enum}
 					
@@ -84,7 +85,7 @@
 					\end{packed_enum}
 					\item poslati voditelju postaje zahtjev za tragačima
 					 \begin{packed_enum}
-						\item dodati opis o željenim tragačima
+						\item dodati tražene kvalifikacije tragača
 					\end{packed_enum}
 					\item zadati zadatke tragačima
 					 \begin{packed_enum}
