--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -343,7 +343,7 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 		Razredi su logički podijeljeni prema pravu pristupa metodama specifičnih aktora kako bi se smanjila prenapučenost unutar dijagrama.
 		Pri prikazu su naglašene samo ovisnosti između razreda koji pripadaju istom dijelu dijagrama radi jednostavnije organizacije.
 		Vrsta ovisnosti između različitim razredima može se zaključiti iz naziva i tipova atributa unutar tih razreda.
-		Controller razredi sadrži privatne varijable koje mu omogućuju komunikaciju sa Service razredima.
+		Controller razredi sadrži privatne varijable koje im omogućuju komunikaciju sa Service razredima.
 		
 		\eject
 
