--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -28,6 +28,17 @@
 			0.8.1 & Dodani svi dijagrami razreda. & Franjo Vuković, Marko Pongrac, Marko Kukolj & 16.11.2023. \\[3pt] \hline 
 			0.9 & Opisi razreda i dodatak & Josipa Udovičić & 16.11.2023. \\[3pt] \hline
 			1.0 & Korigiranje teksta i provjera dokumentacije & Josipa Udovičić & 17.11.2023. \\[3pt] \hline
+			1.1 & Implementacija. & Josipa Udovičić, Franjo Vuković, Marko Pongrac, Marko Kukolj, Domagoj Jurič & 16.01.2024. \\[3pt] \hline
+			1.2 & Ispravljeni dijelovi prve predaje. & Stela Troskot, Josipa Udovičić, Franjo Vuković, Marko Kukolj & 17.01.2024. \\[3pt] \hline
+			1.3 & Dodan dijagram stanja i dijagram aktivnosti. & Stela Troskot & 07.01.2024. \\[3pt] \hline
+			1.4 & Dodan dijagram komponenti. & Stela Troskot & 09.01.2024. \\[3pt] \hline
+			1.5 & Dodan dijagram razmještaja. & Stela Troskot & 11.01.2024. \\[3pt] \hline
+			1.6 & Dodan opis tehnologija i alata. & Stela Troskot & 13.01.2024. \\[3pt] \hline
+			1.7 & Ispitivanje programskih rješenja. & Marko Pongrac & 19.01.2024. \\[3pt] \hline
+			1.8 & Dodane upute za puštanje u pogon. & Stela Troskot & 19.01.2024. \\[3pt] \hline
+			1.9 & Dodan zaključak. & Stela Troskot & 19.01.2024. \\[3pt] \hline
+			2.0 & Konačna verzija dokumentacije. & Stela Troskot & 19.01.2024. \\[3pt] \hline
+
 
 		\end{longtblr}
 	
