--- a/Dokumentacija/PROGI_ProjektnaDokumentacija.tex
+++ b/Dokumentacija/PROGI_ProjektnaDokumentacija.tex
@@ -4,7 +4,7 @@
 %prostor izmedu naredbi \documentclass i \begin{document} se zove uvod. U njemu se nalaze naredbe koje se odnose na cijeli dokument
 
 %osnovni LaTex ne može riješiti sve probleme, pa se koriste različiti paketi koji olakšavaju izradu željenog dokumenta
-\usepackage[croatian]{babel} 
+\usepackage[croatian]{babel}  
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{txfonts}
@@ -95,7 +95,7 @@
 			\vspace*{\stretch{3.0}}
 			
 			\huge Wild Track\\
-			\Large Dokumentacija, Rev. 1.\\
+			\Large Dokumentacija, Rev. 2.\\
 			
 			\vspace*{\stretch{12.0}}
 			\normalsize
@@ -104,7 +104,7 @@
 			
 			
 			\vspace*{\stretch{1.0}}
-			Datum predaje: \textit{17. studenog 2023.}\\
+			Datum predaje: \textit{19. siječnja 2024.}\\
 	
 			\vspace*{\stretch{4.0}}
 			
