--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -136,23 +136,23 @@
 				
 				Funkcionalni zahtjevi       & 1 &  &  &  &  &  &  \\ 
 				Opis pojedinih obrazaca 	&  &  & 2 &  &  & 2 &  \\ 
-				Dijagram obrazaca 			&  & 3 &  & 3 & 3 &  &  \\ 
-				Sekvencijski dijagrami		&  & 2 &  & 2 & 2 &  &  \\ 
+				Dijagram obrazaca 			&  & 3 & 4 & 3 & 3 &  &  \\ 
+				Sekvencijski dijagrami		&  & 2 & 2 & 2 & 2 &  &  \\ 
 				Opis sekvencijskih dijagrama	&  &  &  & & 2 &  &  \\ 
-				Opis ostalih zahtjeva 		&  &  & 11 &  &  & 11 &  \\ 
+				Opis ostalih zahtjeva 		&  &  & 13 &  &  & 11 &  \\ 
 
 				Arhitektura i dizajn sustava	 & 3 &  &  &  &  &  &  \\ 
 				Baza podataka(opis)				& 1 &  &  &  &  &  & 3  \\ 
 				Dijagram razreda 			&  & 6 &  & 6 & 9 &  &   \\ 
-				Dijagram stanja				&  &  & 3 &  &  &  &  \\ 
-				Dijagram aktivnosti 		&  &  & 3 &  &  &  &  \\ 
-				Dijagram komponenti			&  &  & 4 &  &  &  &  \\ 
+				Dijagram stanja				&  &  & 4 &  &  &  &  \\ 
+				Dijagram aktivnosti 		&  &  & 4 &  &  &  &  \\ 
+				Dijagram komponenti			&  &  & 5 &  &  &  &  \\ 
 				Korištene tehnologije i alati 		&  &  & 1 &  &  &  &  \\ 
-				Ispitivanje programskog rješenja 	&  &  &  & 9 &  &  &  \\ 
-				Dijagram razmještaja			&  &  & 2 &  &  &  &  \\ 
-				Upute za puštanje u pogon 		& 2 & 8 &  &  & 3 &  &  \\  
+				Ispitivanje programskog rješenja 	&  &  &  & 9 &  & 3 &  \\ 
+				Dijagram razmještaja			&  &  & 4 &  &  &  &  \\ 
+				Upute za puštanje u pogon 		& 2 & 8 & 3 &  & 3 &  &  \\  
 				Dnevnik sastajanja 			& 1 &  &  &  &  &  &  \\ 
-				Zaključak i budući rad 		&  &  & 1 &  &  &  &  \\  
+				Zaključak i budući rad 		&  &  & 2 &  &  &  &  \\  
 				Popis literature 			& 1 &  &  &  &  &  &  \\  
 				&  &  &  &  &  &  &  \\ \hline 
 				izrada početne stranice(registracija) 	& 7 &  &  &  &  &  &  \\  
