--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -136,13 +136,13 @@
 				
 				Funkcionalni zahtjevi       & 1 &  &  &  &  &  &  \\ 
 				Opis pojedinih obrazaca 	&  &  & 2 &  &  & 2 &  \\ 
-				Dijagram obrazaca 			&  & 3 & 4 & 3 & 3 &  &  \\ 
+				Dijagram obrazaca 			&  & 3 & 6 & 3 & 3 &  &  \\ 
 				Sekvencijski dijagrami		&  & 2 & 2 & 2 & 2 &  &  \\ 
 				Opis sekvencijskih dijagrama	&  &  &  & & 2 &  &  \\ 
 				Opis ostalih zahtjeva 		&  &  & 13 &  &  & 11 &  \\ 
 
 				Arhitektura i dizajn sustava	 & 3 &  &  &  &  &  &  \\ 
-				Baza podataka(opis)				& 1 &  &  &  &  &  & 3  \\ 
+				Baza podataka(opis)				& 1 &  & 1 &  &  &  & 3  \\ 
 				Dijagram razreda 			&  & 6 &  & 6 & 9 &  &   \\ 
 				Dijagram stanja				&  &  & 4 &  &  &  &  \\ 
 				Dijagram aktivnosti 		&  &  & 4 &  &  &  &  \\ 
