dodani render i selenium u 5.1.korsitene tehnologije

--- a/Dokumentacija/Implementacija.tex
+++ b/Dokumentacija/Implementacija.tex
@@ -72,8 +72,30 @@
 					\item korišten za dokumentiranje projekta
 					\item \textit{https://www.latex-project.org/}
 				\end{packed_item}
+				
+				\item \textbf{Render}
+				\begin{packed_item}
+					\item cloud platforma za izradu i besplatno hostanje web-aplikacija i stranica
+					\item korišten za puštanje \textit{backenda} i \textit{frontenda} u pogon i hostanje baze podataka
+					\item \textit{https://www.render.com/}
+				\end{packed_item}
+
+				\item \textbf{Render}
+				\begin{packed_item}
+					\item cloud platforma za izradu i besplatno hostanje web-aplikacija i stranica
+					\item korišten za puštanje \textit{backenda} i \textit{frontenda} u pogon i hostanje baze podataka
+					\item \textit{https://www.render.com/}
+				\end{packed_item}
+
+				\item \textbf{Selenium}
+				\begin{packed_item}
+					\item program za automatizaciju web aplikacija u svrhe testiranja
+					\item korišten za ispitivanje
+					\item \textit{https://www.selenium.dev}
+				\end{packed_item}
 			\end{packed_item}
 			
+
 			 \eject 
 		
 	
