--- a/Dokumentacija/Implementacija.tex
+++ b/Dokumentacija/Implementacija.tex
@@ -101,30 +101,220 @@
 	
 		\section{Ispitivanje programskog rješenja}
 			
-			\textbf{\textit{dio 2. revizije}}\\
-			
-			 \textit{U ovom poglavlju je potrebno opisati provedbu ispitivanja implementiranih funkcionalnosti na razini komponenti i na razini cijelog sustava s prikazom odabranih ispitnih slučajeva. Studenti trebaju ispitati temeljnu funkcionalnost i rubne uvjete.}
-	
-			
 			\subsection{Ispitivanje komponenti}
-			\textit{Potrebno je provesti ispitivanje jedinica (engl. unit testing) nad razredima koji implementiraju temeljne funkcionalnosti. Razraditi \textbf{minimalno 6 ispitnih slučajeva} u kojima će se ispitati redovni slučajevi, rubni uvjeti te izazivanje pogreške (engl. exception throwing). Poželjno je stvoriti i ispitni slučaj koji koristi funkcionalnosti koje nisu implementirane. Potrebno je priložiti izvorni kôd svih ispitnih slučajeva te prikaz rezultata izvođenja ispita u razvojnom okruženju (prolaz/pad ispita). }
+			Napravljen je java file za provođenje testova BackendApplicationTests.java sa JUnit testovima koji provjeravaju:
+
+			\begin{packed_item}
+					\item vraća li grešku funkcija za dohvaćanje korisnika s nepostojećim korisničkim imenom - testGetUserByUsernameThatDoesNotExist
+					\item vraća li funkcija pravog korisnika za dohvaćanje korisnika s postojećim korisničkim imenom -  testGetUserByUsernameThatExists
+					\item hoće li funkcija baciti grešku ako je uneseno ime nepostojeće postaje – testStationAlreadyHasManagerNonExistentStation
+					\item hoće li funkcija za nepostojeći ID vozila baciti gresku – testFindVehicleByNonexistentId
+					\item hoće li funkcija za dobro ime, ali lošu lozinku vratiti False – testLoginInvalidPassword
+					\item hoće li funkcija vratiti True ako stanica već ima dodijeljenog voditelja - testStationAlreadyHasManager
+				\end{packed_item}
 			
 			
-			
+			\begin{figure}[H]
+				\includegraphics[scale=0.85]{slike/Zadovoljeni testovi.png}
+				\centering
+				\caption{Zadovoljeni testovi}
+				\label{fig:Zadovoljeni testovi}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=1]{slike/BackendApplicationTests.png}
+				\centering
+				\caption{Kod BackendApplicationTests.java}
+				\label{fig:BackendApplicationTests}
+			\end{figure}
+
+
+			%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\subsection{Ispitivanje sustava}
+
+			\textbf{Testovi sustava}
+			Provedeni su testovi administratorove mogućnosti uređivanja podataka 
+			korisnika, mogućnost voditelja postaje da na svoju postaju doda 
+			tragače koji nisu dodijeljeni nijednoj drugoj postaji, mogućnost 
+			istraživača da prouči informacije pojedinim jedinkama životinja 
+			te mogućnost da mu se na karti prikazuju mjesta gdje se pojedine 
+			vrste životinja kreću.
+	
+			\textit{\textbf{Mijenjanje podataka o korisnicima}}
+			\newline
+			Za test mijenjanja podataka o korisnicima koriste se ulazni podaci 
+			„admin“ za korisničko ime te „password“ za lozinku. 
+
 			
-			 \textit{Potrebno je provesti i opisati ispitivanje sustava koristeći radni okvir Selenium\footnote{\url{https://www.seleniumhq.org/}}. Razraditi \textbf{minimalno 4 ispitna slučaja} u kojima će se ispitati redovni slučajevi, rubni uvjeti te poziv funkcionalnosti koja nije implementirana/izaziva pogrešku kako bi se vidjelo na koji način sustav reagira kada nešto nije u potpunosti ostvareno. Ispitni slučaj se treba sastojati od ulaza (npr. korisničko ime i lozinka), očekivanog izlaza ili rezultata, koraka ispitivanja i dobivenog izlaza ili rezultata.\\ }
-			 
-			 \textit{Izradu ispitnih slučajeva pomoću radnog okvira Selenium moguće je provesti pomoću jednog od sljedeća dva alata:}
-			 \begin{itemize}
-			 	\item \textit{dodatak za preglednik \textbf{Selenium IDE} - snimanje korisnikovih akcija radi automatskog ponavljanja ispita	}
-			 	\item \textit{\textbf{Selenium WebDriver} - podrška za pisanje ispita u jezicima Java, C\#, PHP koristeći posebno programsko sučelje.}
-			 \end{itemize}
-		 	\textit{Detalji o korištenju alata Selenium bit će prikazani na posebnom predavanju tijekom semestra.}
-			
-			\eject 
-		
-		
+
+			Pritiskom na gumb „Prijava“ prikazuje nam se početna stranica za 
+			administratora. Odaberemo opciju „Pregled korisnika“ te 
+			na popisu korisnika odaberemo korisnika s korisničkim imenom 
+			„tragac10“. Prikazuje nam se stranica sa svim podacima o navedenom 
+			korisniku te opcije „Izbriši korisnika“ i „Promjeni podatke“. 
+			Odaberemo opciju „Promijeni podatke“ te nakon što nam se otvori 
+			forma za mijenjanje podataka, odaberemo polje ispod teksta „Email:“. 
+			Kao novu adresu unesemo tragac15@gmail.hr te pritisnemo na tipku 
+			„Spremi promjene“. Nakon toga ponovno nam se otvara stranica s 
+			opcijama „Pregled korisnika“ i „Pregled zahtjeva“. Ponovno 
+			odaberemo opciju „Pregled korisnika“ te pronađemo korisnika s 
+			korisničkim imenom „tragač10“. Nakon što pritisnemo na tog korisnika,
+			 otvara nam se stranica s njegovim podacima gdje možemo vidjeti 
+			 njegovu izmijenjenu email adresu.
+
+\begin{figure}[H]
+				\includegraphics[scale=0.6]{slike/test11.png}
+				\centering
+				\caption{Mijenjanje podataka o korisnicima korak 1}
+				\label{fig:Mijenjanje podataka o korisnicima korak 1}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.6]{slike/test12.png}
+				\centering
+				\caption{Mijenjanje podataka o korisnicima korak 2}
+				\label{fig:Mijenjanje podataka o korisnicima korak 2}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.6]{slike/test13.png}
+				\centering
+				\caption{Mijenjanje podataka o korisnicima korak 3}
+				\label{fig:Mijenjanje podataka o korisnicima korak 3}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.7]{slike/test14.png}
+				\centering
+				\caption{Mijenjanje podataka o korisnicima korak 4}
+				\label{fig:Mijenjanje podataka o korisnicima korak 4}
+			\end{figure}
+
+
+
+			\textit{\textbf{Dodavanje tragača na postaju}}
+			\newline
+			Za test dodavanja tragača na postaju u ulozi voditelja postaje koriste se ulazni 
+			podaci „waiting“ za korisničko ime te „password“ za lozinku. Pritiskom na gumb 
+			„Prijava“ prikazuje nam se početna stranica za korisnike u ulozi voditelja postaje. 
+			Pojavljuje nam se tekst s postajom kojom upravlja prijavljeni voditelj te pet opcija 
+			za odabir. Nude se opcije „Pregled svih tragača“, „Pregled svojih tragača“, „Pregled 
+			akcija“, „Pregled zahtjeva“ te „Moj profil“ (u gornjem desnom kutu). Odaberemo opciju 
+			„Pregled svih tragača“, nakon čega nam se otvara prozor s tekstom „Pregled svih tragača“ 
+			te ispod njega popis svih tragača koji trenutno nemaju dodijeljenu postaju. 
+			Pritiskom na kućicu ispod pripadajućeg tragača, nudi nam se šest različitih 
+			vozila za dodjeljivanje kao sposobnosti odabranom tragaču. Odaberemo tragača s 
+			imenom „test“ te prezimenom „tragac“. Nakon toga mu kao prijevozna sredstva dodijelimo 
+			mogućnosti „pješke“ te „dronom“. Pritiskom na gumb „Potvrdi“ potvrđujemo svoj odabir. 
+			Nakon što smo potvrdili svoj odabir, ponovno se otvara početna stranica korisnika u ulozi 
+			voditelja postaje. Ovaj put odaberemo opciju „Pregled svojih tragača“, nakon čega nam se  
+			otvara prozor sa tekstom „Lista svojih tragača“ te ispod njega popis svih tragača 
+			dodijeljenih postaji, s njihovim osnovnim korisničkim podacima. Možemo vidjeti da se 
+			sada i na popisu nalazi tragač s imenom „test“ i prezimenom „tragac“.
+
+
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.8]{slike/Dodavanje tragača na postaju korak 1.png}
+				\centering
+				\caption{Dodavanje tragača na postaju korak 1}
+				\label{fig:Dodavanje tragača na postaju korak 1}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.62]{slike/Dodavanje tragača na postaju korak 2.png}
+				\centering
+				\caption{Dodavanje tragača na postaju korak 2}
+				\label{fig:Dodavanje tragača na postaju korak 2}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.85]{slike/Dodavanje tragača na postaju korak 3.png}
+				\centering
+				\caption{Dodavanje tragača na postaju korak 3}
+				\label{fig:Dodavanje tragača na postaju korak 3}
+			\end{figure}
+
+
+			\textit{\textbf{Pregled informacija o životinjama}}
+			\newline
+
+			Za test pregleda informacija o životinjama u ulozi istraživača koriste se ulazni 
+			podaci „istrazivacXmouse“ za korisničko ime te „lozinka1“ za lozinku. Pritiskom 
+			na gumb „Prijava“ prikazuje nam se početna stranica za korisnike u ulozi 
+			istraživača. Za odabir nam se nude opcije „Popis akcija“, „Karta – životinje“,
+			 „O životinjama“ te „Moj profil“ (u gornjem desnom kutu). Odaberemo opciju 
+			 „O životinjama“. Otvara nam se izbornik s različitim vrstama životinja. 
+			 Odaberemo opciju „Sivi vuk“ te nakon što nam se prikaže prozor s popisom 
+			 jedinki te vrste, odaberemo opciju „Sivi vuk, id: 7“. Otvara nam se prozor u 
+			 kojemu možemo vidjeti sliku pripadajuće vrste, njen latinski naziv, detaljan opis 
+			 vrste te komentare ostalih korisnika vezanih uz navedenu jedinku. Dodatno, nudi 
+			 nam se mogućnost brisanja te pisanja vlastitih komentara.
+
+
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.6]{slike/Pregled informacija o životinjama korak 1.png}
+				\centering
+				\caption{Pregled informacija o životinjama korak 1}
+				\label{fig:Pregled informacija o životinjama korak 1}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.55]{slike/Pregled informacija o životinjama korak 2.png}
+				\centering
+				\caption{Pregled informacija o životinjama korak 2}
+				\label{fig:Pregled informacija o životinjama korak 2}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.6]{slike/Pregled informacija o životinjama korak 3.png}
+				\centering
+				\caption{Pregled informacija o životinjama korak 3}
+				\label{fig:Pregled informacija o životinjama korak 3}
+			\end{figure}
+
+
+			\textit{\textbf{Pregled staništa vrste na karti}}
+			\newline
+			Za test pregleda staništa pojedine vrste životinja na karti u ulozi istraživača 
+			koriste se ulazni podaci „ju54164“ za korisničko ime te „lozinka1“ za lozinku. 
+			Pritiskom na gumb „Prijava“ prikazuje nam se početna stranica za korisnike u 
+			ulozi istraživača. Za odabir nam se nude opcije „Popis akcija“, 
+			„Karta – životinje“, „O životinjama“ te „Moj profil“ (u gornjem desnom kutu). 
+			Odaberemo opciju „Karta – životinje“. Otvara nam se prozor u čijem se središtu 
+			nalazi karta, a u gornjem lijevom kutu dvije opcije za prikaz na karti, 
+			„Po vrsti“ te „Po jedinci“. Odaberemo opciju „Po vrsti“, nakon čega nam se 
+			ispod pojavljuje popis svih mogućih vrsta. Pritiskom na gumb „Sivi sokol“, 
+			na karti nam se pojavljuje heatmap svih povijesnih lokacija jedinki koje 
+			pripadaju toj vrsti. 
+
+
+			\begin{figure}[H]
+				\includegraphics[scale=0.75]{slike/Pregled staništa vrste na karti korak 1.png}
+				\centering
+				\caption{Pregled staništa vrste na karti korak 1}
+				\label{fig:Pregled staništa vrste na karti korak 1}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=1]{slike/Pregled staništa vrste na karti korak 2.png}
+				\centering
+				\caption{Pregled staništa vrste na karti korak 2}
+				\label{fig:Pregled staništa vrste na karti korak 2}
+			\end{figure}
+
+			\begin{figure}[H]
+				\includegraphics[scale=1]{slike/Pregled staništa vrste na karti korak 3.png}
+				\centering
+				\caption{Pregled staništa vrste na karti korak 3}
+				\label{fig:Pregled staništa vrste na karti korak 3}
+			\end{figure}
+
+
+
+
+		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\section{Dijagram razmještaja}
 
 		UML-dijagram razmještaja je vrsta strukturnog UML-dijagrama 
